--- a/application/templates/services.html
+++ b/application/templates/services.html
@@ -21,8 +21,7 @@
                 <th scope="col">Master/Main</th>
                 <th scope="col">Stage</th>
                 <th scope="col">Prod</th>
-                <th scope="col">Days without release</th>
-                <th scope="col">PRs waiting for prod release</th>
+                <th scope="col">Stats</th>
                 <th scope="col">QE</th>
             </tr>
         </thead>
@@ -70,13 +69,26 @@
                     {{ repo.release_production_method }}
                 </td>
                 <td>
-                    {{ repo.days_without_release }}
-                </td>
-                <td>
-                    {% if not repo.list_of_pr %}
-                    0
-                    {% else %}
-                    {{ repo.list_of_pr|count }}
+                    <div style="white-space: nowrap;">
+                        Days without prod release: <strong>{{ repo.days_without_release }}</strong> 
+                    </div>
+                    <div style="white-space: nowrap;">
+                        PRs waiting for prod release:
+                        {% if not repo.list_of_pr %}
+                        <strong>0</strong>
+                        {% else %}
+                        <strong>{{ repo.list_of_pr|count }}</strong>
+                        {% endif %}
+                    </div>
+                    {% if repo.release_stage_method == "manual" %}
+                    <div style="white-space: nowrap;">
+                        PRs waiting for stage release:
+                        {% if not repo.list_of_pr_master_stage %}
+                        <strong>0</strong>
+                        {% else %}
+                        <strong>{{ repo.list_of_pr_master_stage|count }}</strong> 
+                        {% endif %}
+                    </div>
                     {% endif %}
                 </td>
                 <td>
@@ -100,7 +112,7 @@
                 </td>
             </tr>
             <tr class="hidden-info">
-                <td colspan="8" width="100%">
+                <td colspan="7" width="100%">
                     <div style="padding-bottom: 20px;">
                         Last Production Release: <br>
                         <a href="{{ repo.release_production_mr_url }}" , target="blank">MR#{{
