add chars for passed and failing state

--- a/application/templates/services/main_row.html
+++ b/application/templates/services/main_row.html
@@ -5,8 +5,7 @@
         <div style="white-space: nowrap;">
             commit: <code>{{ repo.commit_master[:7] }}</code>
             <span id="{{ repo.id }}-commit-sha-master" hidden>{{ repo.commit_master }}</span>
-            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                data-id="{{ repo.id }}"
+            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" data-id="{{ repo.id }}"
                 onclick='copyToClipboard(this.dataset.id + "-commit-sha-master")'>Copy</button>
         </div>
         branch name:
@@ -16,11 +15,10 @@
         <div style="white-space: nowrap;">
             commit: <code>{{ repo.commit_stage[:7] }}</code>
             <span id="{{ repo.id }}-commit-sha-stage" hidden>{{ repo.commit_stage }}</span>
-            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                data-id="{{ repo.id }}"
+            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" data-id="{{ repo.id }}"
                 onclick='copyToClipboard(this.dataset.id + "-commit-sha-stage")'>Copy</button>
         </div>
-        
+
 
         method:
         {{ repo.release_stage_method }}
@@ -29,17 +27,16 @@
         <div style="white-space: nowrap;">
             commit: <code>{{ repo.commit_production[:7] }}</code>
             <span id="{{ repo.id }}-commit-sha-prod" hidden>{{ repo.commit_production }}</span>
-            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                data-id="{{ repo.id }}"
+            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" data-id="{{ repo.id }}"
                 onclick='copyToClipboard(this.dataset.id + "-commit-sha-prod")'>Copy</button>
         </div>
-        
+
         method:
         {{ repo.release_production_method }}
     </td>
     <td>
         <div style="white-space: nowrap;">
-            Days without prod release: <strong>{{ repo.days_without_release }}</strong> 
+            Days without prod release: <strong>{{ repo.days_without_release }}</strong>
         </div>
         <div style="white-space: nowrap;">
             PRs waiting for prod release:
@@ -55,28 +52,45 @@
             {% if not repo.list_of_pr_master_stage %}
             <strong>0</strong>
             {% else %}
-            <strong>{{ repo.list_of_pr_master_stage|count }}</strong> 
+            <strong>{{ repo.list_of_pr_master_stage|count }}</strong>
             {% endif %}
         </div>
         {% endif %}
     </td>
     <td>
         {% if repo.stage_build_link %}
-        <a href="{{ repo.stage_build_link }}" target="_blank">
+        <div style="white-space: nowrap;">
+            <a href="{{ repo.stage_build_link }}" target="_blank">
+                {% if repo.stage_build_status %}
+                Passing{% else %}
+                Failing{% endif %}
+                Stage
+            </a>
             {% if repo.stage_build_status %}
-            Passing
+            <span style="color: green;">&check;</span>
             {% else %}
-            Failing
-            {% endif %}&nbsp;Stage
-        </a>
+            <span style="color: red;">&cross;</span>
+            {% endif %}
+        </div>
+
         {% endif %}
-        <br />
         {% if repo.production_build_link %}
-        <a href="{{ repo.production_build_link }}" target="_blank">
-            {% if repo.production_build_status%}
-            Passing{% else %}
-            Failing{% endif %}&nbsp;Production
-        </a>
-        {% endif %}
+        <div>
+
+            <div style="white-space: nowrap;">
+                <a href="{{ repo.production_build_link }}" target="_blank">
+                    {% if repo.production_build_status%}
+                    Passing{% else %}
+                    Failing{% endif %}
+                    Production
+                </a>
+                {% if repo.production_build_status %}
+                <span style="color: green;">&check;</span>
+                {% else %}
+                <span style="color: red;">&cross;</span>
+                {% endif %}
+            </div>
+
+            {% endif %}
     </td>
 </tr>
