--- a/application/templates/services/main_row.html
+++ b/application/templates/services/main_row.html
@@ -15,8 +15,8 @@
         <div style="white-space: nowrap;">
             commit: <code>{{ repo.commit_stage[:7] }}</code>
             <span id="{{ repo.id }}-commit-sha-stage" hidden>{{ repo.commit_stage }}</span>
-            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" data-id="{{ repo.id }}"
-                onclick='copyToClipboard(this.dataset.id + "-commit-sha-stage")'>Copy</button>
+            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
+                onclick='copyToClipboard("{{ repo.id }}-commit-sha-stage")'>Copy</button>
         </div>
 
 
@@ -27,8 +27,8 @@
         <div style="white-space: nowrap;">
             commit: <code>{{ repo.commit_production[:7] }}</code>
             <span id="{{ repo.id }}-commit-sha-prod" hidden>{{ repo.commit_production }}</span>
-            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" data-id="{{ repo.id }}"
-                onclick='copyToClipboard(this.dataset.id + "-commit-sha-prod")'>Copy</button>
+            <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
+                onclick='copyToClipboard("{{ repo.id }}-commit-sha-prod")'>Copy</button>
         </div>
 
         method:
