--- a/application/templates/services/main_row.html
+++ b/application/templates/services/main_row.html
@@ -6,7 +6,8 @@
             commit: <code>{{ repo.commit_master[:7] }}</code>
             <span id="{{ repo.id }}-commit-sha-master" hidden>{{ repo.commit_master }}</span>
             <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;" data-id="{{ repo.id }}"
-                onclick='copyToClipboard(this.dataset.id + "-commit-sha-master")'>Copy</button>
+                    onclick='copyToClipboard(this.dataset.id + "-commit-sha-master")'>Copy
+            </button>
         </div>
         branch name:
         {{ repo.main_branch }}
@@ -16,7 +17,8 @@
             commit: <code>{{ repo.commit_stage[:7] }}</code>
             <span id="{{ repo.id }}-commit-sha-stage" hidden>{{ repo.commit_stage }}</span>
             <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                onclick='copyToClipboard("{{ repo.id }}-commit-sha-stage")'>Copy</button>
+                    onclick='copyToClipboard("{{ repo.id }}-commit-sha-stage")'>Copy
+            </button>
         </div>
 
 
@@ -28,7 +30,8 @@
             commit: <code>{{ repo.commit_production[:7] }}</code>
             <span id="{{ repo.id }}-commit-sha-prod" hidden>{{ repo.commit_production }}</span>
             <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                onclick='copyToClipboard("{{ repo.id }}-commit-sha-prod")'>Copy</button>
+                    onclick='copyToClipboard("{{ repo.id }}-commit-sha-prod")'>Copy
+            </button>
         </div>
 
         method:
