--- a/release-manager-ui/templates/open_pr.html
+++ b/release-manager-ui/templates/open_pr.html
@@ -5,8 +5,6 @@
 
 <div class="container-fluid">
     <h1 class="mt-4">Open PRs</h1>
-    <p style="font-weight: bold;">without drafts and WIP</p>
-    <br>
     {% include "includes/dropdown_names.html" %}
     <br>
     <br>
@@ -21,6 +19,10 @@
     <ul id="pr_list">
         {% for pr in prs %}
         <li>
+            {% if pr.draft %}
+                (draft)
+            {% endif %}
+
             <a href="{{ pr.html_url }}" target="_blank">PR#{{ pr.number }}</a>
 
             {{ pr.title }}
