updated dropdown for selectiong PR author

--- a/release-manager-ui/templates/deployments.html
+++ b/release-manager-ui/templates/deployments.html
@@ -9,6 +9,7 @@
     <h3>No data to display. </h3>
     {% else %}
 
+    Select PR author:
     {% include "includes/dropdown_names.html" %}
     <br>
     <br>
