--- a/release-manager-ui/templates/includes/dropdown_names.html
+++ b/release-manager-ui/templates/includes/dropdown_names.html
@@ -1,5 +1,5 @@
 <select id="dropdown_names">
-    <option value="all">Select the name ...</option>
+    <option value="all">...</option>
     {% for name in authors %}
     <option value="{{ name }}">{{ name }}</option>
     {% endfor %}
