--- a/release-manager-ui/templates/open_pr.html
+++ b/release-manager-ui/templates/open_pr.html
@@ -5,6 +5,9 @@
 
 <div class="container-fluid">
     <h1 class="mt-4">Open PRs</h1>
+    <br>
+
+    Select PR author:
     {% include "includes/dropdown_names.html" %}
     <br>
     <br>
