--- a/release-manager-ui/templates/release_notes.html
+++ b/release-manager-ui/templates/release_notes.html
@@ -22,52 +22,84 @@
         <h3>
             Current status:
         </h3>
-        <div>
-            Last prod release:
-            <a href="{{ data.release_production_mr_url }}">
-                MR#{{ data.release_production_mr_url.split("/")[-1] }}
-            </a>
-            merged on <strong>{{ data.date_release_production }}</strong> by <strong>{{ data.release_author
-                }}</strong><br>
-
-            {% if data.commit_stage == data_commit_master %}
-            last commit SHA on the {{ data.main_branch }} branch: {{ data.commit_master }}
-            {% endif %}
-            <div>
+        <ul>
+            <li>
+                Last prod release MR:
+                <a href="{{ data.release_production_mr_url }}">
+                    MR#{{ data.release_production_mr_url.split("/")[-1] }}
+                </a>
+                merged on <strong>{{ data.date_release_production }}</strong> by <strong>{{ data.release_author
+                    }}</strong><br>
+            </li>
+            <li>
                 Production commit: <code>{{ data.commit_production[:7] }}</code>
                 <span id="commit-sha-production" hidden>{{ data.commit_production }}</span>
                 <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
                     title="Copy the commit SHA in the Clipboard" onclick="copyToClipboard('commit-sha-production')">⧉
                 </button>
-            </div>
-            <div>
+            </li>
+            <li>
                 Stage commit: <code>{{ data.commit_stage[:7] }}</code>
                 <span id="commit-sha-stage" hidden>{{ data.commit_stage }}</span>
                 <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
                     title="Copy the commit SHA in the Clipboard" onclick="copyToClipboard('commit-sha-stage')">⧉
                 </button>
-            </div>
-
-            {% if data.commit_stage == data_commit_master %}
-            <div>
-                last commit on the {{ data.main_branch }} branch: {{ data.commit_master[:7] }}
+            </li>
+            {% if data.commit_stage != data.commit_master %}
+            <li>
+                Last {{ data.main_branch }} branch commit: <code>{{ data.commit_master[:7] }}</code>
                 <span id="commit-sha-master" hidden>{{ data.commit_master}}</span>
                 <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                    onclick="copyToClipboard('commit-sha-master')">Copy
+                    onclick="copyToClipboard('commit-sha-master')">⧉
                 </button>
-            </div>
+            </li>
+            {% endif %}
+            <li>
+                Days without release: <span style="font-weight: bold;">{{ data.days_without_release }}</span> <br>
+            </li>
+            <li>
+                PRs waiting for prod release: <span style="font-weight: bold;">{{ data.list_of_pr|count }}</span> <br>
+            </li>
+            <li>
+                All PRs with QE status "passed" or "N/A":
+                {% if data.all_passed %}
+                <span style="color: darkgreen; font-weight: bold;">Yes</span>
+                {% else %}
+                <span style="color: crimson; font-weight: bold;">No</span>
+                {% endif %}
+            </li>
+            <li>
+                Stage / Production diff: <a
+                    href="{{ data.link + '/compare/' + data.commit_production + '...' + data.commit_stage }}" ,
+                    target="blank">link</a>
+            </li>
+            {% if data.commit_stage != data.commit_master %}
+            <li>
+                {{ data.main_branch | capitalize }} / Stage diff: <a
+                    href="{{ data.link + '/compare/' + data.commit_stage + '...' + data.commit_master }}" ,
+                    target="blank">link</a>
+            </li>
+            <li>
+                {{ data.main_branch | capitalize }} / Production diff: <a
+                    href="{{ data.link + '/compare/' + data.commit_production + '...' + data.commit_master }}" ,
+                    target="blank">link</a>
+            </li>
             {% endif %}
 
-            Days without release: <span style="font-weight: bold;">{{ data.days_without_release }}</span> <br>
-            PRs waiting for prod release: <span style="font-weight: bold;">{{ data.list_of_pr|count }}</span> <br>
-            All PRs with QE status "passed" or "N/A":
-            {% if data.all_passed %}
-            <span style="color: darkgreen; font-weight: bold;">Yes</span>
-            {% else %}
-            <span style="color: crimson; font-weight: bold;">No</span>
-            {% endif %}
-
-        </div>
+        </ul>
+    </div>
+    <div>
+        <h3>
+            New status:
+        </h3>
+        <ul>
+            <li>
+                New prod release MR:
+            </li>
+            <li>
+                New production commit:
+            </li>
+        </ul>
     </div>
     <div>
         <h3>Scope / Status: </h3>
