--- a/release-manager-ui/templates/layout.html
+++ b/release-manager-ui/templates/layout.html
@@ -34,7 +34,7 @@
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- JavaScript -->
-<script src="../static/js/scripts.js"></script>
+<script src="../static/js/layout.js"></script>
 </body>
 
 </html>
