--- a/release-manager-ui/templates/release_notes.html
+++ b/release-manager-ui/templates/release_notes.html
@@ -3,145 +3,153 @@
 {% block content %}
 
 <div class="container-fluid">
-    <h1>
-        Release notes for {{ data.name }}
-    </h1>
-    <div>
-        <h3>
-            Links:
-        </h3>
-        <ul>
-            {% for link in additional_data %}
-            <li>
-                <a href="{{ link.link_value }}" target="_blank">{{ link.link_name }}</a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div>
-        <h3>
-            Current status:
-        </h3>
-        <ul>
-            <li>
-                Last prod release MR:
-                <a href="{{ data.release_production_mr_url }}">
-                    MR#{{ data.release_production_mr_url.split("/")[-1] }}
-                </a>
-                merged on <strong>{{ data.date_release_production }}</strong> by <strong>{{ data.release_author
-                    }}</strong><br>
-            </li>
-            <li>
-                Production commit: <code>{{ data.commit_production[:7] }}</code>
-                <span id="commit-sha-production" hidden>{{ data.commit_production }}</span>
-                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                    title="Copy the commit SHA in the Clipboard" onclick="copyToClipboard('commit-sha-production')">⧉
-                </button>
-            </li>
-            <li>
-                Stage commit: <code>{{ data.commit_stage[:7] }}</code>
-                <span id="commit-sha-stage" hidden>{{ data.commit_stage }}</span>
-                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                    title="Copy the commit SHA in the Clipboard" onclick="copyToClipboard('commit-sha-stage')">⧉
-                </button>
-            </li>
-            {% if data.commit_stage != data.commit_master %}
-            <li>
-                Last {{ data.main_branch }} branch commit: <code>{{ data.commit_master[:7] }}</code>
-                <span id="commit-sha-master" hidden>{{ data.commit_master}}</span>
-                <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
-                    onclick="copyToClipboard('commit-sha-master')">⧉
-                </button>
-            </li>
-            {% endif %}
-            <li>
-                Days without release: <span style="font-weight: bold;">{{ data.days_without_release }}</span> <br>
-            </li>
-            <li>
-                PRs waiting for prod release: <span style="font-weight: bold;">{{ data.list_of_pr|count }}</span> <br>
-            </li>
-            <li>
-                All PRs with QE status "passed" or "N/A":
-                {% if data.all_passed %}
-                <span style="color: darkgreen; font-weight: bold;">Yes</span>
-                {% else %}
-                <span style="color: crimson; font-weight: bold;">No</span>
-                {% endif %}
-            </li>
-            <li>
-                Stage / Production diff: <a
-                    href="{{ data.link + '/compare/' + data.commit_production + '...' + data.commit_stage }}" ,
-                    target="blank">link</a>
-            </li>
-            {% if data.commit_stage != data.commit_master %}
-            <li>
-                {{ data.main_branch | capitalize }} / Stage diff: <a
-                    href="{{ data.link + '/compare/' + data.commit_stage + '...' + data.commit_master }}" ,
-                    target="blank">link</a>
-            </li>
-            <li>
-                {{ data.main_branch | capitalize }} / Production diff: <a
-                    href="{{ data.link + '/compare/' + data.commit_production + '...' + data.commit_master }}" ,
-                    target="blank">link</a>
-            </li>
-            {% endif %}
+    <button id="copy_button" type="button" class="btn btn-outline-primary" style="margin: 10px;">
+        Copy to Clipboard
+    </button>
 
-        </ul>
-    </div>
-    <div>
-        <h3>
-            New status:
-        </h3>
-        <ul>
-            <li>
-                New prod release MR:
-            </li>
-            <li>
-                New production commit:
-            </li>
-        </ul>
-    </div>
-    <div>
-        <h3>Scope / Status: </h3>
-        <p>PRs and related Jiras in scope with QE status.</p>
+    <div id="releaseNotes">
+        <h1>Release notes for {{ data.name }}</h1>
         <div>
-            <ul id="pr_list">
-                {% for pr in data.list_of_pr %}
+            <h3>
+                Links:
+            </h3>
+            <ul>
+                {% for link in additional_data %}
                 <li>
-                    <a href="{{ pr.link }}" , target="blank">PR#{{ pr.link.split("/")[-1] }}</a>
-                    {{ pr.title }}
-                    <strong>({{ pr.pr_author }})</strong>
-                    merged <strong>{{ pr.merge_date }}</strong>
-
-                    {% if pr.jira_tickets %}
-
-                    <ul>
-                        {% for ticket in pr.jira_tickets %}
-                        <li>
-                            <a href="{{ ticket.link }}" , target="blank">{{ ticket.name }}</a>
-                            {% endfor %}
-                        </li>
-                    </ul>
-                    {% endif %}
-
-                    <ul>
-                        <li>
-                            QE status:
-                            {% if pr.qe_status %}
-                            {{ pr.qe_status }}
-                            {% if pr.qe_note %}
-                            : {{ pr.qe_note}}
-                            {% endif %}
-                            <strong>({{ pr.qe_author }})</strong>
-                            {% endif %}
-                        </li>
-                    </ul>
-
+                    <a href="{{ link.link_value }}" target="_blank">{{ link.link_name }}</a>
                 </li>
                 {% endfor %}
             </ul>
         </div>
+        <div>
+            <h3>
+                Current status:
+            </h3>
+            <ul>
+                <li>
+                    Last prod release MR:
+                    <a href="{{ data.release_production_mr_url }}">
+                        MR#{{ data.release_production_mr_url.split("/")[-1] }}
+                    </a>
+                    merged on <strong>{{ data.date_release_production }}</strong> by <strong>{{ data.release_author
+                        }}</strong>
+                </li>
+                <li>
+                    Production commit: <code>{{ data.commit_production[:7] }}</code>
+                    <span id="commit-sha-production" hidden>{{ data.commit_production }}</span>
+                    <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
+                        title="Copy the commit SHA in the Clipboard"
+                        onclick="copyToClipboard('commit-sha-production')">⧉
+                    </button>
+                </li>
+                <li>
+                    Stage commit: <code>{{ data.commit_stage[:7] }}</code>
+                    <span id="commit-sha-stage" hidden>{{ data.commit_stage }}</span>
+                    <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
+                        title="Copy the commit SHA in the Clipboard" onclick="copyToClipboard('commit-sha-stage')">⧉
+                    </button>
+                </li>
+                {% if data.commit_stage != data.commit_master %}
+                <li>
+                    Last {{ data.main_branch }} branch commit: <code>{{ data.commit_master[:7] }}</code>
+                    <span id="commit-sha-master" hidden>{{ data.commit_master}}</span>
+                    <button type="button" class="btn btn-outline-primary btn-xs" style="padding: 0;"
+                        onclick="copyToClipboard('commit-sha-master')">⧉
+                    </button>
+                </li>
+                {% endif %}
+                <li>
+                    Days without release: <span style="font-weight: bold;">{{ data.days_without_release }}</span>
+                </li>
+                <li>
+                    PRs waiting for prod release: <span style="font-weight: bold;">{{ data.list_of_pr|count }}</span>
+                </li>
+                <li>
+                    All PRs with QE status "passed" or "N/A":
+                    {% if data.all_passed %}
+                    <span style="color: darkgreen; font-weight: bold;">Yes</span>
+                    {% else %}
+                    <span style="color: crimson; font-weight: bold;">No</span>
+                    {% endif %}
+                </li>
+                <li>
+                    Stage / Production diff: <a
+                        href="{{ data.link + '/compare/' + data.commit_production + '...' + data.commit_stage }}" ,
+                        target="blank">link</a>
+                </li>
+                {% if data.commit_stage != data.commit_master %}
+                <li>
+                    {{ data.main_branch | capitalize }} / Stage diff: <a
+                        href="{{ data.link + '/compare/' + data.commit_stage + '...' + data.commit_master }}" ,
+                        target="blank">link</a>
+                </li>
+                <li>
+                    {{ data.main_branch | capitalize }} / Production diff: <a
+                        href="{{ data.link + '/compare/' + data.commit_production + '...' + data.commit_master }}" ,
+                        target="blank">link</a>
+                </li>
+                {% endif %}
+
+            </ul>
+        </div>
+        <div>
+            <h3>
+                New status:
+            </h3>
+            <ul>
+                <li>
+                    New prod release MR:
+                </li>
+                <li>
+                    New production commit:
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h3>Scope / Status: </h3>
+            <p>PRs and related Jiras in scope with QE status.</p>
+            <div>
+                <ul id="pr_list">
+                    {% for pr in data.list_of_pr %}
+                    <li>
+                        <a href="{{ pr.link }}" , target="blank">PR#{{ pr.link.split("/")[-1] }}</a>
+                        {{ pr.title }}
+                        <strong>({{ pr.pr_author }})</strong>
+                        merged <strong>{{ pr.merge_date }}</strong>
+
+                        {% if pr.jira_tickets %}
+
+                        <ul>
+                            {% for ticket in pr.jira_tickets %}
+                            <li>
+                                <a href="{{ ticket.link }}" , target="blank">{{ ticket.name }}</a>
+                                {% endfor %}
+                            </li>
+                        </ul>
+                        {% endif %}
+
+                        <ul>
+                            <li>
+                                QE status:
+                                {% if pr.qe_status %}
+                                {{ pr.qe_status }}
+                                {% if pr.qe_note %}
+                                : {{ pr.qe_note}}
+                                {% endif %}
+                                <strong>({{ pr.qe_author }})</strong>
+                                {% endif %}
+                            </li>
+                        </ul>
+
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
+
 </div>
 
+<!-- JavaScript -->
+<script src="../static/js/release_notes.js"></script>
 {% endblock %}
