--- a/release-manager-ui/templates/release_notes.html
+++ b/release-manager-ui/templates/release_notes.html
@@ -9,6 +9,8 @@
 
     <div id="releaseNotes">
         <h1>Release notes for {{ data.name }}</h1>
+        <h2>Release date: <span id="dateDisplay"></span></h2>
+        <br>
         <div>
             <h3>
                 Links:
