used url_for() for static files

--- a/release-manager-ui/templates/deployments.html
+++ b/release-manager-ui/templates/deployments.html
@@ -42,5 +42,5 @@
 </div>
 
 <!-- JavaScript -->
-<script src="../static/js/main_row.js"></script>
+<script src="{{ url_for('static', filename='js/main_row.js') }}"></script>
 {% endblock %}
