--- a/release-manager-ui/templates/includes/sidebar.html
+++ b/release-manager-ui/templates/includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="border-end bg-white" id="sidebar-wrapper">
     <div class="sidebar-heading border-bottom bg-light">
-        <img src="../../static/favicon.ico" alt="Platform ACcess and MANagement team">
+        <img src="{{ url_for('static', filename='favicon.ico') }}" alt="Platform Access and Management team">
         A & M team
     </div>
     <div class="list-group list-group-flush">
