--- a/release-manager-ui/templates/open_pr.html
+++ b/release-manager-ui/templates/open_pr.html
@@ -45,5 +45,6 @@
 </div>
 
 <!-- JavaScript -->
-<script src="../static/js/open_pr.js"></script>
+<script src="{{ url_for('static', filename='js/open_pr.js') }}"></script>
+
 {% endblock %}
