--- a/release-manager-ui/templates/release_notes.html
+++ b/release-manager-ui/templates/release_notes.html
@@ -153,5 +153,6 @@
 </div>
 
 <!-- JavaScript -->
-<script src="../static/js/release_notes.js"></script>
+<script src="{{ url_for('static', filename='js/release_notes.js') }}"></script>
+
 {% endblock %}
