added list of merged PR in the menu

--- a/release-manager-ui/templates/includes/sidebar.html
+++ b/release-manager-ui/templates/includes/sidebar.html
@@ -8,5 +8,7 @@
         <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{{ url_for('deployments') }}">Deployments</a>
         <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{{ url_for('open_pr') }}">Open
             PR</a>
+        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{{ url_for('merged_pr') }}">Merged
+            PR</a>
     </div>
 </div>
