increase downloaded merged PRs from 10 into 14 days and small fixes

--- a/release-manager-ui/templates/merged_pr.html
+++ b/release-manager-ui/templates/merged_pr.html
@@ -5,6 +5,7 @@
 
 <div class="container-fluid">
     <h1 class="mt-4">Merged PRs</h1>
+    <h2>(merged PRs in last 14 days)</h2>
     <br>
     <button id="update_button_merged_pr" type="button" class="btn btn-outline-primary" style="display: inline-flex; align-items: center; width: 120px; margin-bottom: 20px;">
         Update data
